--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,10 +32,10 @@ html {
 }
 
 body {
-    /*display: flex;*/
-    /* flex-direction: column;*/
+    display: flex;
+    flex-direction: column;
     color: var(--primary-text-color );
-    background-color: var(--default-primary-color );    
+    /* background-color: var(--default-primary-color );     */
     line-height: 1.3;
     font-size: 1.75rem;
 }
@@ -63,6 +63,8 @@ p{
     font-size: 2rem;     
     text-align: center; 
     font-weight: bold;
+    color: red;
+
 }
 
 header {
@@ -83,13 +85,16 @@ footer {
     position:fixed;
     bottom: 0px;
     width: 100%;
-    text-align: center;     
+    text-align: center;  
+    padding: 10px;   
   }
 
 /* ========================================================================
    Component: Class and Id selectors
  ========================================================================== */
-
+.hide{
+    display: none;
+}
 
 #btn1{
     font-size: 2.5rem;
@@ -128,3 +133,41 @@ footer {
     box-shadow: 0px 5px 15px 5px;
     position: relative;
 }
+
+#question{
+    width:100%;
+    height : 50px;
+    position: absolute;
+    right:0;
+    top:0;    
+}
+
+#question p{
+    margin : 50;
+    padding : 10px;
+    font-size: 2.5rem;
+    /* color: var(--secondary-text-color);  */
+    text-align: left;
+    top: 500px;
+    color: red;
+}
+
+#options{
+    /* width : 600px; */
+    position:relative;
+    right : 0;
+    top : 100px;
+    padding : 10px
+}
+
+.option{
+    display :inline-block;
+    width : 200px;
+    text-align: center;    
+    border : 4px solid var(--light-primary-color);
+    border-radius: 25px;
+    cursor: pointer;
+    padding : 5px;
+    background-color:white;
+}
+
