--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -171,3 +171,23 @@ footer {
     background-color:white;
 }
 
+.answer{    
+    border: 2px solid var(--light-primary-color );
+    display: inline-block;    
+    margin-left : 20px;
+    margin-right : 5px;
+    width : 25px;
+    height : 25px;    
+    background-color:white;
+      
+}
+
+
+#time{
+    position: absolute;
+    height : 100px;
+    width : 250px;
+    bottom : 200px;
+    text-align: center;
+    float :left; 
+}
