--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -186,14 +186,17 @@ footer {
     position: absolute;
     height : 100px;
     width : 250px;
-    bottom : 230px;
-    text-align: center;    
+    bottom : 150px;
+    text-align: left;  
+    margin-left : 20px;
+    color : var(--default-primary-color); 
+    font-size: 2rem; 
+    font-weight: bolder;
 }
 
 #answers{    
     display: inline-block;    
-    margin-left : 20px;
-    margin-right : 5px;
-    width : 300px;    
-    bottom : 200px  !important   ; 
+    margin-left : 5px;
+    margin-right : 5px;      
+    margin-top: 120px;
 } 
