--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -96,7 +96,7 @@ footer {
     display: none;
 }
 
-#btn1{
+#btn1 , #btn2{
     font-size: 2.5rem;
     font-weight: bolder;       
     height:50px;
@@ -107,7 +107,7 @@ footer {
     background-color: var(--divider-color);
 }
 
-#btn1:hover{
+#btn1:hover , #btn2:hover{
     border: 3px solid var(--dark-primary-color);
     color : var(--primary-text-color);
 }
@@ -201,7 +201,64 @@ footer {
     margin-top: 120px;
 } 
 
-.diplay-score{
+/* .diplay-score{
     text-align: center; 
+} */
+
+#score-wrapper{
+    display: flex;
+    justify-content :center;
+    align-items :center;
+}
+
+#score{
+    justify-content :center;
+    align-items :center;
+    bottom : 150px;
+}
+
+ul {
+    list-style-type: none;
+    padding: 0;
+    
+  }
+
+.score-li {
+    height: 50px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    padding: 5px;
+    background-color: var(--dark-primary-color);
+    color: white;
+    font-size: 1.5em;
+    line-height: 1.5;
+    font-weight: bolder;
+  }
+  
+  /* .score-li:before {
+    content: "\200B";
+    position: absolute;
+  }
+   */
+  .score-li::after {
+    content: " ";
+    display: block;
+    clear: both;
+  }
+  
+  .score-button {
+    float: right;
+    border: none;
+    height: 40px;
+    cursor: pointer;
+    background-color: var(--accent-color);
+    color: white;
+    font-size: 1em;
+  }
+
+form label {
+    font-size: 2rem;
+    font-weight: bolder;
+    color: var(--dark-primary-color);
 }
 
