--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -96,7 +96,7 @@ footer {
     display: none;
 }
 
-#btn1 , #btn2{
+#btn1 , #btn2 , #refresh{
     font-size: 2.5rem;
     font-weight: bolder;       
     height:50px;
@@ -107,7 +107,20 @@ footer {
     background-color: var(--divider-color);
 }
 
-#btn1:hover , #btn2:hover{
+
+ #refresh{
+    font-size: 2rem;
+    font-weight: bolder;       
+    height:50px;
+    width: 100px;
+    border-radius: 200px;
+    border : 2px solid var(--light-primary-color);    
+    cursor: pointer;   
+    color: var(--secondary-text-color); 
+    background-color: var(--divider-color);
+}
+
+#btn1:hover , #btn2:hover , #refresh:hover{
     border: 3px solid var(--dark-primary-color);
     color : var(--primary-text-color);
 }
